# tree-sitter-hurl

./: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-hurl.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_hurl/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterHurl/: hurl.h
bindings/swift/TreeSitterHurlTests/: TreeSitterHurlTests.swift
examples/front_page/: basic_auth.html  basic_auth.hurl  binary_body.html  binary_body.hurl  capture_data.html  chaining_requests.html  chaining_requests.hurl  cookies.html  cookies.hurl  filters.hurl  form.html  form.hurl  json_body.html  json_body.hurl  multipart.html  multipart.hurl  polling_retry.html  polling_retry.hurl  query_params.html  query_params.hurl  request_headers.html  request_headers.hurl  response_headers.html  response_headers.hurl  soap.html  soap.hurl  testing_bytes.html  testing_bytes.hurl  testing_jsonpath.html  testing_jsonpath.hurl  testing_set_cookie.html  testing_set_cookie.hurl  testing_status_code.html  testing_status_code.hurl  testing_xpath.html  testing_xpath.hurl  text_body.html  text_body.hurl
queries/: folds.scm  highlights.scm  indents.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
