[package]
name = "tree-sitter-hurl"
description = "Hurl grammar for the tree-sitter parsing library"
version = "1.1.2"
keywords = ["incremental", "parsing", "hurl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/pfeiferj/tree-sitter-hurl"
edition = "2018"
license = "Apache-2.0"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
