[package]
name = "tree-sitter-hurl"
description = "Hurl grammar for the tree-sitter parsing library"
version = "1.6.2"
keywords = ["incremental", "parsing", "hurl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/pfeiferj/tree-sitter-hurl"
edition = "2018"
license = "Apache-2.0"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0"
